# invest-brain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  brain-landing-preview.html  llms.txt  package-lock.json  status.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  community-showcase.md  feature_request.md  use_case_share.md
.neat-freak/reports/: invest-brain-2026-07-24.md
app/: globals.css  layout.tsx  page.tsx
app/.impeccable/: hook.cache.json
app/components/: DemoModal.tsx  HeroDemo.tsx
app/openapi/: page.tsx
data/cards/: None_card_1780701409.md
data/config/: llm.json  webhook.json
data/frameworks/: ljg-invest.md  ljg-rank.md
data/graph/: SCHEMA.md
data/industry/: 新能源电池框架.md  申万28个行业分类.json  白酒行业框架.md  银行行业框架.md
data/memory/: memory.db
data/research/: reports_20260716.json
data/vectors/: chroma.sqlite3
docs/: Brain_SEO_Strategy.md  Brain_SEO_技术修复速查表.md  business-model.md  github-cold-start.md  mcp-tutorial.md  website-spec.md  学习辅导模式 示例.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
public/: demo.html  llms.txt  robots.txt
scripts/: download_local_model.py
src/: patterns_cli.py
src/mcp_server/: __init__.py  (+8 more)
src/skills/investment_skill/: README.md  __init__.py  pyproject.toml  skill.yaml
src/skills/investment_skill/handlers/: __init__.py  coaching_handler.py  idea_handler.py  master_handler.py  memory_handler.py  orchestrator_handler.py  rag_handler.py  reminder_handler.py
(+65 files in other folders)
