[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-skill"
version = "0.1.0"
description = "Investment Assistant Skill Package - Orchestrator, Idea Recorder, Knowledge RAG, Memory Keeper, Reminder Scheduler, Master Analyst"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["handlers"]